package.json was modified, gulpfile.js was modified

--- a/package.json
+++ b/package.json
@@ -4,8 +4,19 @@
   "description": "The first landing page markup",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "editorconfig": "editorconfig-cli",
+    "stylelint": "stylelint \"source/sass/**/*.scss\" --syntax scss",
+    "test": "npm run editorconfig && npm run stylelint",
+    "build": "npm run build",
+    "start": "npm start"
   },
+  "editorconfig-cli": [
+    "*.json",
+    "*.js",
+    "./*.html",
+    "source/img/**/*.svg",
+    "source/sass/**/*.{sass,scss}"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hornuglan/HTML5-JQuery-landing-demo.git"
@@ -18,6 +29,19 @@
   "homepage": "https://github.com/hornuglan/HTML5-JQuery-landing-demo#readme",
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "normalize.css": "^8.0.0"
+    "gulp-connect": "^5.6.1",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.9.3",
+    "normalize.css": "^8.0.0",
+    "popper.js": "^1.14.4",
+    "slick-carousel": "^1.8.1"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.26.0",
+    "gulp": "^3.9.1",
+    "gulp-livereload": "^4.0.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-serve": "^1.4.0",
+    "gulp-webserver": "^0.9.1"
   }
 }
