--- a/package.json
+++ b/package.json
@@ -28,8 +28,14 @@
     "browser-sync": "^2.26.0",
     "browsersync": "0.0.1-security",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^6.0.0",
+    "gulp-clean-css": "^3.10.0",
     "gulp-connect": "^5.6.1",
+    "gulp-csso": "^3.0.1",
     "gulp-livereload": "^4.0.0",
+    "gulp-plumber": "^1.2.0",
+    "gulp-postcss": "^8.0.0",
+    "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
     "gulp-serve": "^1.4.0",
     "gulp-webserver": "^0.9.1",
