--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/hornuglan/HTML5-JQuery-landing-demo#readme",
   "dependencies": {
+    "animate.css": "^3.7.0",
     "bootstrap": "^4.1.3",
+    "hamburgers": "^1.1.3",
     "jquery": "^3.3.1",
+    "magnific-popup": "^1.1.0",
     "node-sass": "^4.9.3",
     "popper.js": "^1.14.4",
     "slick-carousel": "^1.8.1"
