--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,13 @@ typings/
 #Styleguide/
 
 #.idea/
+.idea/HTML5-JQuery-landing-demo.iml
+.idea/HTML5-JQuery-landing-demo.iml
+.idea/HTML5-JQuery-landing-demo.iml
+.idea/encodings.xml
+.idea/HTML5-JQuery-landing-demo.iml
+.idea/inspectionProfiles/Project_Default.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/workspace.xml
+.idea/modules.xml
